--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,7 +11,8 @@ import { SITE_TITLE } from '../consts';
 		<HeaderLink href="/">Home</HeaderLink>
 		<HeaderLink href="/blog">Blog</HeaderLink>
 		<HeaderLink href="/about">About</HeaderLink>
-		<HeaderLink href="https://twitter.com/astrodotbuild" target="_blank">Twitter</HeaderLink>
+		<HeaderLink href="/links">Links</HeaderLink>
+		<HeaderLink href="https://twitter.com/yuni_hutsuka" target="_blank">Twitter</HeaderLink>
 		<HeaderLink href="https://github.com/withastro/astro" target="_blank">GitHub</HeaderLink>
 	</nav>
 </header>
