--- a/src/pages/links.astro
+++ b/src/pages/links.astro
@@ -2,6 +2,7 @@
 import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
+import Card from '../components/Card.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 ---
 
@@ -14,6 +15,28 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 		<Header title={SITE_TITLE} />
 
 		<main>
+            <ul role="list" class="link-card-grid">
+                <Card
+                    href="https://docs.astro.build/"
+                    title="Documentation"
+                    body="Learn how Astro works and explore the official API docs."
+                />
+                <Card
+                    href="https://astro.build/integrations/"
+                    title="Integrations"
+                    body="Supercharge your project with new frameworks and libraries."
+                />
+                <Card
+                    href="https://astro.build/themes/"
+                    title="Themes"
+                    body="Explore a galaxy of community-built starter themes."
+                />
+                <Card
+                    href="https://astro.build/chat/"
+                    title="Community"
+                    body="Come say hi to our amazing Discord community. ❤️"
+                />
+            </ul>
 		</main>
 
 		<Footer />
