feat: edit cards

--- a/src/pages/links.astro
+++ b/src/pages/links.astro
@@ -17,24 +17,14 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 		<main>
             <ul role="list" class="link-card-grid">
                 <Card
-                    href="https://docs.astro.build/"
-                    title="Documentation"
-                    body="Learn how Astro works and explore the official API docs."
+                    href="https://twitter.com/yuni_hutsuka"
+                    title="Twitter"
+                    body="主に生息しているTwitter。まともな人間ではないので要注意。"
                 />
                 <Card
-                    href="https://astro.build/integrations/"
-                    title="Integrations"
-                    body="Supercharge your project with new frameworks and libraries."
-                />
-                <Card
-                    href="https://astro.build/themes/"
-                    title="Themes"
-                    body="Explore a galaxy of community-built starter themes."
-                />
-                <Card
-                    href="https://astro.build/chat/"
-                    title="Community"
-                    body="Come say hi to our amazing Discord community. ❤️"
+                    href="https://github.com/yuni-hutsuka"
+                    title="GitHub"
+                    body="GitHubのアカウント。まともな開発はしていない。基本的に小説の倉庫みたいな扱いをしている。"
                 />
             </ul>
 		</main>
