--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,44 +6,49 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 ---
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 	</head>
 	<body>
 		<Header title={SITE_TITLE} />
 		<main>
-			<h1>🧑‍🚀 Hello, Astronaut!</h1>
+            <h2>前文</h2>
+
 			<p>
-				Welcome to the official <a href="https://astro.build/">Astro</a> blog starter template. This
-				template serves as a lightweight, minimally-styled starting point for anyone looking to build
-				a personal website, blog, or portfolio with Astro.
+                ようこそ。
+                お越し頂き誠にありがとうございます。
 			</p>
 			<p>
-				This template comes with a few integrations already configured in your
-				<code>astro.config.mjs</code> file. You can customize your setup with
-				<a href="https://astro.build/integrations">Astro Integrations</a> to add tools like Tailwind,
-				React, or Vue to your project.
+                このサイトは私のブログ、小説、ポートフォリオなどを掲載しています。
+                コンテンツはオリジナルSF小説、エヴァ二次創作等です。
 			</p>
-			<p>Here are a few ideas on how to get started with the template:</p>
-			<ul>
-				<li>Edit this page in <code>src/pages/index.astro</code></li>
-				<li>Edit the site header items in <code>src/components/Header.astro</code></li>
-				<li>Add your name to the footer in <code>src/components/Footer.astro</code></li>
-				<li>Check out the included blog posts in <code>src/pages/blog/</code></li>
-				<li>Customize the blog post page layout in <code>src/layouts/BlogPost.astro</code></li>
-			</ul>
+
+            <h2>サイト開設の経緯</h2>
+
 			<p>
-				Have fun! If you get stuck, remember to <a href="https://docs.astro.build/"
-					>read the docs
-				</a> or <a href="https://astro.build/chat">join us on Discord</a> to ask questions.
+                最近は便利なサイトが増え、ブログにしろ小説にしろ、あるいは絵や写真、呟きにいたっても整備されたプラットフォームが探せばある状態になりました。
+                かつての古臭いインターネットから、少しずつ万人に使いやすい形へ変化することで、多くの人に創作、情報の門戸を開くことが出来るというのは、実に喜ばしいことです。
 			</p>
-			<p>
-				Looking for a blog template with a bit more personality? Check out <a
-					href="https://github.com/Charca/astro-blog-template"
-					>astro-blog-template
-				</a> by <a href="https://twitter.com/Charca">Maxi Ferreira</a>.
-			</p>
+            <p>
+                ただし、古い作品（事実、エヴァは悲しいかな古い作品の一つであると思います）の二次創作は、主にそういった古い時代のインターネットに残されています。
+                僕はそういった時代の遺産を摂取して育ちました。
+                あの時代の空気が好きで、出来ればいつかそうやって個人サイトを持ちたい、とずっと思っていました。
+            </p>
+            <p>
+                過去にも一度、自作のサイトを公開したことがありますが、残念ながら長続きはしませんでした。
+                それは、まだ技術面の知識がなかったこと、それを補うほどの活力を自作サイトの運営に向けられなかった事が原因でした。
+                今回はそうならないように、ある程度整備された環境を整えたので、きっと（たぶん）長続きするはずです。
+            </p>
+            <p>
+                最後に、このサイトを見つけて下さった貴方に限りない感謝を。
+                楽しんで頂ければ幸いです。
+            </p>
+
+            <h2>Static Site Generator</h2>
+            <p>
+                このサイトは、静的サイトジェネレータ Astro を用いて作成しています。
+            </p>
 		</main>
 		<Footer />
 	</body>
