feat: add cards to links.astro

--- a/src/pages/links.astro
+++ b/src/pages/links.astro
@@ -26,6 +26,16 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
                     title="GitHub"
                     body="GitHubのアカウント。まともな開発はしていない。基本的に小説の倉庫みたいな扱いをしている。"
                 />
+                <Card
+                    href="https://www.pixiv.net/users/20509498"
+                    title="Pixiv"
+                    body="Pixivのアカウント。エヴァの二次創作小説を主に載せている。"
+                />
+                <Card
+                    href="https://kakuyomu.jp/users/yuni_hutsuka"
+                    title="カクヨム"
+                    body="カクヨムのアカウント。オリジナルのSF小説を投稿している。"
+                />
             </ul>
 		</main>
 
