feat: add Header "Link Collection"

--- a/src/pages/links.astro
+++ b/src/pages/links.astro
@@ -15,6 +15,8 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 		<Header title={SITE_TITLE} />
 
 		<main>
+            <h2>Link Collection</h2>
+
             <ul role="list" class="link-card-grid">
                 <Card
                     href="https://twitter.com/yuni_hutsuka"
