--- a/src/components/FormattedDate.astro
+++ b/src/components/FormattedDate.astro
@@ -8,7 +8,7 @@ const { date } = Astro.props;
 
 <time datetime={date.toISOString()}>
 	{
-		date.toLocaleDateString('en-us', {
+		date.toLocaleDateString('ja-JP-u-ca-japanese', {
 			year: 'numeric',
 			month: 'short',
 			day: 'numeric',
