--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -36,6 +36,7 @@ const posts = (await getCollection('blog')).sort(
 	<body>
 		<Header />
 		<main>
+            <h2>Blogs</h2>
 			<section>
 				<ul>
 					{
