--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,9 @@
 import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
+
+import Layout from '../layouts/BlogPost.astro';
+
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 ---
 
@@ -11,45 +14,49 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 	</head>
 	<body>
-		<Header title={SITE_TITLE} />
-		<main>
-            <h2>前文</h2>
+            <Layout
+                title="書斎"
+                description="サイト紹介"
+                pubDate={new Date('April 08 2023')}
+                updatedDate={new Date('April 08 2023')}
+            >
+                <h2>前文</h2>
 
-			<p>
-                ようこそ。
-                お越し頂き誠にありがとうございます。
-			</p>
-			<p>
-                このサイトは私のブログ、小説、ポートフォリオなどを掲載しています。
-                コンテンツはオリジナルSF小説、エヴァ二次創作等です。
-			</p>
+                <p>
+                    ようこそ。
+                    お越し頂き誠にありがとうございます。
+                </p>
+                <p>
+                    このサイトは私のブログ、小説、ポートフォリオなどを掲載しています。
+                    コンテンツはオリジナルSF小説、エヴァ二次創作等です。
+                </p>
 
-            <h2>サイト開設の経緯</h2>
+                <h2>サイト開設の経緯</h2>
 
-			<p>
-                最近は便利なサイトが増え、ブログにしろ小説にしろ、あるいは絵や写真、呟きにいたっても整備されたプラットフォームが探せばある状態になりました。
-                かつての古臭いインターネットから、少しずつ万人に使いやすい形へ変化することで、多くの人に創作、情報の門戸を開くことが出来るというのは、実に喜ばしいことです。
-			</p>
-            <p>
-                ただし、古い作品（事実、エヴァは悲しいかな古い作品の一つであると思います）の二次創作は、主にそういった古い時代のインターネットに残されています。
-                僕はそういった時代の遺産を摂取して育ちました。
-                あの時代の空気が好きで、出来ればいつかそうやって個人サイトを持ちたい、とずっと思っていました。
-            </p>
-            <p>
-                過去にも一度、自作のサイトを公開したことがありますが、残念ながら長続きはしませんでした。
-                それは、まだ技術面の知識がなかったこと、それを補うほどの活力を自作サイトの運営に向けられなかった事が原因でした。
-                今回はそうならないように、ある程度整備された環境を整えたので、きっと（たぶん）長続きするはずです。
-            </p>
-            <p>
-                最後に、このサイトを見つけて下さった貴方に限りない感謝を。
-                楽しんで頂ければ幸いです。
-            </p>
+                <p>
+                    最近は便利なサイトが増え、ブログにしろ小説にしろ、あるいは絵や写真、呟きにいたっても整備されたプラットフォームが探せばある状態になりました。
+                    かつての古臭いインターネットから、少しずつ万人に使いやすい形へ変化することで、多くの人に創作、情報の門戸を開くことが出来るというのは、実に喜ばしいことです。
+                </p>
+                <p>
+                    ただし、古い作品（事実、エヴァは悲しいかな古い作品の一つであると思います）の二次創作は、主にそういった古い時代のインターネットに残されています。
+                    僕はそういった時代の遺産を摂取して育ちました。
+                    あの時代の空気が好きで、出来ればいつかそうやって個人サイトを持ちたい、とずっと思っていました。
+                </p>
+                <p>
+                    過去にも一度、自作のサイトを公開したことがありますが、残念ながら長続きはしませんでした。
+                    それは、まだ技術面の知識がなかったこと、それを補うほどの活力を自作サイトの運営に向けられなかった事が原因でした。
+                    今回はそうならないように、ある程度整備された環境を整えたので、きっと（たぶん）長続きするはずです。
+                </p>
+                <p>
+                    最後に、このサイトを見つけて下さった貴方に限りない感謝を。
+                    楽しんで頂ければ幸いです。
+                </p>
 
-            <h2>Static Site Generator</h2>
-            <p>
-                このサイトは、静的サイトジェネレータ Astro を用いて作成しています。
-            </p>
+                <h2>Static Site Generator</h2>
+                <p>
+                    このサイトは、静的サイトジェネレータ Astro を用いて作成しています。
+                </p>
+            </Layout>
 		</main>
-		<Footer />
 	</body>
 </html>
