--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -24,7 +24,7 @@ const { href, title, body } = Astro.props;
 		list-style: none;
 		display: flex;
 		padding: 0.25rem;
-		background-color: white;
+		background-color: #1e1542;
 		background-image: none;
 		background-size: 400%;
 		border-radius: 0.6rem;
@@ -40,7 +40,7 @@ const { href, title, body } = Astro.props;
 		padding: 1rem 1.3rem;
 		border-radius: 0.35rem;
 		color: #111;
-		background-color: white;
+		background-color: #1e1542;
 		opacity: 0.8;
 	}
 	h2 {
@@ -51,7 +51,7 @@ const { href, title, body } = Astro.props;
 	p {
 		margin-top: 0.5rem;
 		margin-bottom: 0;
-		color: #444;
+		color: #fff;
 	}
 	.link-card:is(:hover, :focus-within) {
 		background-position: 0;
