--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -21,4 +21,5 @@ import { SITE_TITLE } from '../consts';
 	h1 {
 		margin: 0.5em 0;
 	}
+    @import url('https://fonts.googleapis.com/css2?family=Shippori+Mincho:wght@400;500;600;700;800&display=swap');
 </style>
