feat: edit about.astro

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -7,6 +7,15 @@ import Layout from '../layouts/BlogPost.astro';
 	description="二日ゆにについてのざっくりとした自己紹介"
 	pubDate={new Date('April 08 2023')}
 	updatedDate={new Date('April 08 2023')}
-	heroImage="/placeholder-about.jpg"
+	heroImage=""
 >
+    <p>
+        2000年5月13日生まれ。
+        神奈川県出身。
+    </p>
+    <p>
+        アニメ・漫画が好きな情報科学科大学院生。
+        エヴァンゲリオンを主とした庵野秀明監督作品・宇宙戦艦ヤマト・スペース☆ダンディなど幅広く多くの作品とその二次創作群をこよなく愛する。
+        エヴァ（特にLAS）の二次創作及びオリジナルSF小説を書いている。
+    </p>
 </Layout>
