--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,6 +12,7 @@ import { SITE_TITLE } from '../consts';
 		<HeaderLink href="/about">About</HeaderLink>
 		<HeaderLink href="/blog">Blog</HeaderLink>
 		<HeaderLink href="/links">Links</HeaderLink>
+		<HeaderLink href="/logs">Logs</HeaderLink>
 	</nav>
 </header>
 <style>
