feat: edit color

--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -29,7 +29,7 @@ const posts = (await getCollection('blog')).sort(
 				color: #595959;
 			}
 			ul li a:visited {
-				color: #8e32dc;
+				color: #a22041;
 			}
 		</style>
 	</head>
