--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,7 +14,7 @@ body {
 	word-wrap: break-word;
 	overflow-wrap: break-word;
 	line-height: 1.5;
-	color: gray;
+	color: #fff;
 }
 
 body::-webkit-scrollbar {
