feat: delete item "Logs" & add item "Article"

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,8 +11,8 @@ import { SITE_TITLE } from '../consts';
 		<HeaderLink href="/">Home</HeaderLink>
 		<HeaderLink href="/about">About</HeaderLink>
 		<HeaderLink href="/blog">Blog</HeaderLink>
+		<HeaderLink href="/article">Article</HeaderLink>
 		<HeaderLink href="/links">Links</HeaderLink>
-		<HeaderLink href="/logs">Logs</HeaderLink>
 	</nav>
 </header>
 <style>
