--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -39,7 +39,7 @@ const { href, title, body } = Astro.props;
 		line-height: 1.4;
 		padding: 1rem 1.3rem;
 		border-radius: 0.35rem;
-		color: #111;
+		color: gray;
 		background-color: #1e1542;
 		opacity: 0.8;
 	}
