--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -26,7 +26,7 @@ const posts = (await getCollection('blog')).sort(
 			ul li :global(time) {
 				flex: 0 0 130px;
 				font-style: italic;
-				color: #595959;
+				color: gray;
 			}
 			ul li a:visited {
 				color: #a22041;
