feat: footer link to log
フッタにログページへのリンクを貼った

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@ const today = new Date();
 ---
 
 <footer>
-	&copy; {today.getFullYear()} Yuni Hutsuka. All rights reserved.
+	<a href="/logs">&copy; {today.getFullYear()} Yuni Hutsuka. All rights reserved.</a>
 </footer>
 <style>
 	footer {
@@ -11,4 +11,7 @@ const today = new Date();
 		text-align: center;
         color: #a22041;
 	}
+    a {
+        text-decoration:none;
+    }
 </style>
