feat: edit about.astro

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -7,7 +7,7 @@ import Layout from '../layouts/BlogPost.astro';
 	description="二日ゆにについてのざっくりとした自己紹介"
 	pubDate={new Date('April 08 2023')}
 	updatedDate={new Date('April 08 2023')}
-	heroImage=""
+	heroImage="/profile-icon.png"
 >
     <p>
         2000年5月13日生まれ。
