feat: edit width

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,7 +8,7 @@ body {
     font-family: 'Shippori Mincho', serif;
 	margin: auto;
 	padding: 20px;
-	max-width: 65ch;
+	max-width: 800px;
 	text-align: left;
 	background-color: #110c26;
 	word-wrap: break-word;
