--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -29,8 +29,9 @@
     display: block;
   }
   body {
-    @apply flex min-h-screen flex-col bg-skin-fill font-mono text-skin-base 
+    @apply flex min-h-screen flex-col bg-skin-fill text-skin-base 
     selection:bg-skin-accent selection:bg-opacity-70 selection:text-skin-inverted;
+    font-family: 'Martian Mono', 'Sawarabi Gothic', sans-serif;
   }
   section,
   footer {
