:sparkles: / feat: write about
aboutに載せるイラスト
自己紹介に当たるブログの作成

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -86,6 +86,29 @@ const socialCount = SOCIALS.filter(social => social.active).length;
         </LinkButton>
       </div>
     </section>
+
+    <Hr />
+
+    <section id="hero">
+      <p>
+        このサイトは静的サイトジェネレータ
+        <LinkButton
+          className="hover:text-skin-accent underline underline-offset-4 decoration-dashed"
+          href=""
+        >
+          Astro
+        </LinkButton>
+        と
+        <LinkButton
+          className="hover:text-skin-accent underline underline-offset-4 decoration-dashed"
+          href=""
+        >
+          AstroPaper
+        </LinkButton>
+        テーマを用いて作成しました。
+      </p>
+    </section>
+
   </main>
 
   <Footer />
