:sparkles: / feat: complete link

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,14 +33,14 @@ const socialCount = SOCIALS.filter(social => social.active).length;
         記事については
         <LinkButton
           className="hover:text-skin-accent underline underline-offset-4 decoration-dashed"
-          href=""
+          href="https://yuni-hutsuka.github.io/posts"
         >
           Posts
         </LinkButton>
-        を、二日ゆにの自己紹介については
+        を、当サイトの設立経緯紹介については
         <LinkButton
           className="hover:text-skin-accent underline underline-offset-4 decoration-dashed"
-          href=""
+          href="https://yuni-hutsuka.github.io/about"
         >
           About
         </LinkButton>
@@ -94,14 +94,14 @@ const socialCount = SOCIALS.filter(social => social.active).length;
         このサイトは静的サイトジェネレータ
         <LinkButton
           className="hover:text-skin-accent underline underline-offset-4 decoration-dashed"
-          href=""
+          href="https://astro.build"
         >
           Astro
         </LinkButton>
         と
         <LinkButton
           className="hover:text-skin-accent underline underline-offset-4 decoration-dashed"
-          href=""
+          href="https://astro-paper.pages.dev"
         >
           AstroPaper
         </LinkButton>
