:bug: / fix: some file fix
- Twitterへのリンクの修正
- Tagの説明文の日本語化
- Aboutにセクション分けと目次を追加

--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -39,7 +39,7 @@ const tagPosts = getPostsByTag(posts, tag);
   <Header activeNav="tags" />
   <Main
     pageTitle={`Tag:${tag}`}
-    pageDesc={`All the articles with the tag "${tag}".`}
+    pageDesc={`"${tag}"タグがつけられた投稿一覧。`}
   >
     <ul>
       {
