--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,10 +22,10 @@ const socialCount = SOCIALS.filter(social => social.active).length;
   <Header />
   <main id="main-content">
     <section id="hero">
-      <h1>Welcome to YuniSanctorum</h1>
+      <h1>Welcome to "Amanoji"</h1>
 
       <p>
-        YuniSamctorum、「ゆにの書斎」は、しがない物書きである二日ゆにのアウトプットを掲載しておくためのブログです。
+        「書斎・<ruby>天<rt>あまのじ</rt></ruby>」は、しがない物書きである二日ゆにのアウトプットを掲載しておくためのブログです。
         過去にPixivなどで掲載した二次創作小説や、オリジナルの小説などを掲載していく予定となっております。
       </p>
       <p>
