:sparkles: feat: 記事追加

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,6 +16,8 @@ const posts = await getCollection("blog");
 const sortedPosts = getSortedPosts(posts);
 
 const socialCount = SOCIALS.filter(social => social.active).length;
+
+const featuredPosts = sortedPosts.filter(({ data }) => data.featured);
 ---
 
 <Layout>
@@ -55,6 +57,29 @@ const socialCount = SOCIALS.filter(social => social.active).length;
         )
       }
     </section>
+
+    <Hr />
+
+    {
+      featuredPosts.length > 0 && (
+        <>
+          <section id="featured">
+            <h2>Featured</h2>
+            <ul>
+              {featuredPosts.map(({ data }, index) => 
+              index < 4 && (
+              <Card
+                  href={`/posts/${slugify(data)}`}
+                  frontmatter={data}
+                  secHeading={false}
+                />
+              ))}
+            </ul>
+          </section>
+          <Hr />
+        </>
+      )
+    }
 
     <Hr />
 
