:construction: wip: astropaper-v3にアプデ。

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -20,6 +20,9 @@
     --color-card-muted: 138, 51, 2;
     --color-border: 102, 36, 36;
   }
+  html {
+    scroll-behavior: smooth;
+  }
   #sun-svg,
   html[data-theme="dark"] #moon-svg {
     display: none;
@@ -29,7 +32,7 @@
     display: block;
   }
   body {
-    @apply flex min-h-screen flex-col bg-skin-fill text-skin-base 
+    @apply flex min-h-[100svh] flex-col bg-skin-fill font-mono text-skin-base 
     selection:bg-skin-accent selection:bg-opacity-70 selection:text-skin-inverted;
     font-family: 'Martian Mono', 'Sawarabi Gothic', sans-serif;
   }
@@ -60,9 +63,9 @@
 
     
     prose-code:rounded prose-code:bg-skin-card 
-    prose-code:bg-opacity-75 prose-code:p-1 prose-code:!text-skin-base 
+    prose-code:bg-opacity-75 prose-code:p-1 
     prose-code:before:!content-[''] prose-code:after:!content-['']
-    prose-pre:!text-skin-base prose-ol:!text-skin-base 
+    prose-ol:!text-skin-base 
     prose-ul:overflow-x-clip prose-ul:!text-skin-base prose-li:marker:!text-skin-accent
     prose-table:text-skin-base prose-th:border
     prose-th:border-skin-line prose-td:border 
@@ -71,7 +74,7 @@
     prose-img:border-skin-line prose-hr:!border-skin-line;
   }
   .prose a {
-    @apply hover:!text-skin-accent;
+    @apply break-words hover:!text-skin-accent;
   }
   .prose thead th:first-child,
   tbody td:first-child,
@@ -114,6 +117,15 @@
   /* Handle on hover */
   ::-webkit-scrollbar-thumb:hover {
     @apply bg-skin-card-muted;
+  }
+
+  code,
+  blockquote {
+    word-wrap: break-word;
+  }
+
+  pre > code {
+    white-space: pre;
   }
 }
 
