--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,16 +8,14 @@ import Hr from "@components/Hr.astro";
 import Card from "@components/Card";
 import Socials from "@components/Socials.astro";
 import getSortedPosts from "@utils/getSortedPosts";
-import slugify from "@utils/slugify";
 import { SOCIALS } from "@config";
 
 const posts = await getCollection("blog");
 
 const sortedPosts = getSortedPosts(posts);
+const featuredPosts = sortedPosts.filter(({ data }) => data.featured);
 
 const socialCount = SOCIALS.filter(social => social.active).length;
-
-const featuredPosts = sortedPosts.filter(({ data }) => data.featured);
 ---
 
 <Layout>
@@ -66,10 +64,9 @@ const featuredPosts = sortedPosts.filter(({ data }) => data.featured);
           <section id="featured">
             <h2>Featured</h2>
             <ul>
-              {featuredPosts.map(({ data }, index) => 
-              index < 4 && (
-              <Card
-                  href={`/posts/${slugify(data)}`}
+              {featuredPosts.map(({ data, slug }) => (
+                <Card
+                  href={`/posts/${slug}`}
                   frontmatter={data}
                   secHeading={false}
                 />
@@ -81,22 +78,22 @@ const featuredPosts = sortedPosts.filter(({ data }) => data.featured);
       )
     }
 
-    <Hr />
-
     <section id="recent-posts">
       <h2>Recent Posts</h2>
       <ul>
         {
-          sortedPosts.map(
-            ({ data }, index) =>
-              index < 4 && (
-                <Card
-                  href={`/posts/${slugify(data)}`}
-                  frontmatter={data}
-                  secHeading={false}
-                />
-              )
-          )
+          sortedPosts
+            .filter(({ data }) => !data.featured)
+            .map(
+              ({ data, slug }, index) =>
+                index < 4 && (
+                  <Card
+                    href={`/posts/${slug}`}
+                    frontmatter={data}
+                    secHeading={false}
+                  />
+                )
+            )
         }
       </ul>
       <div class="all-posts-btn-wrapper">
@@ -110,29 +107,6 @@ const featuredPosts = sortedPosts.filter(({ data }) => data.featured);
         </LinkButton>
       </div>
     </section>
-
-    <Hr />
-
-    <section id="hero">
-      <p>
-        このサイトは静的サイトジェネレータ
-        <LinkButton
-          className="hover:text-skin-accent underline underline-offset-4 decoration-dashed"
-          href="https://astro.build"
-        >
-          Astro
-        </LinkButton>
-        と
-        <LinkButton
-          className="hover:text-skin-accent underline underline-offset-4 decoration-dashed"
-          href="https://astro-paper.pages.dev"
-        >
-          AstroPaper
-        </LinkButton>
-        テーマを用いて作成しました。
-      </p>
-    </section>
-
   </main>
 
   <Footer />
