:construction: wip: リンクの修正とファイル名の修正

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,14 +32,14 @@ const socialCount = SOCIALS.filter(social => social.active).length;
         記事については
         <LinkButton
           className="hover:text-skin-accent underline underline-offset-4 decoration-dashed"
-          href="https://yuni-hutsuka.github.io/posts"
+          href="/posts"
         >
           Posts
         </LinkButton>
         を、当サイトの設立経緯紹介については
         <LinkButton
           className="hover:text-skin-accent underline underline-offset-4 decoration-dashed"
-          href="https://yuni-hutsuka.github.io/about"
+          href="/about"
         >
           About
         </LinkButton>
